<resources>
    <string name="app_name">LicenseDetection</string>
    <string name="title_home">Capture</string>
    <string name="title_dashboard">Detect</string>
    <string name="title_notifications">Results</string>
    <string name="capture_image">Capture Image</string>
    <string name="select_image">Select Image</string>
    <string name="change_image">Change Image</string>
    <string name="detect_license">Detect License</string>
    <string name="noise_reduction">Noise Reduction</string>
    <string name="canny_edge_detection">Canny Edge Detection</string>
    <string name="sobel_edge_detection">Sobel Edge Detection</string>

</resources>